# SlicerRawImageGuess

./: CMakeLists.txt  LICENSE  README.md
RawImageGuess/: CMakeLists.txt  RawImageGuess.py
RawImageGuess/Resources/UI/: RawImageGuess.ui
RawImageGuessModule/: CMakeLists.txt  RawImageGuessModule.py
